Code composer fix
Making it nicer to go between GitHub and codecomposer

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SADB_Flywheel_77D</name>
+	<name>DADB_Flywheel_77D</name>
 	<comment></comment>
 	<projects>
 	</projects>
